--- a/src/app/card-form/card-form.component.html
+++ b/src/app/card-form/card-form.component.html
@@ -1,23 +1,5 @@
 <form [formGroup]="cardForm"> 
-    <input formControlName="name"/>
-    <ng-container *ngIf="
-    cardForm.controls['name'].dirty &&
-    cardForm.controls['name'].touched &&
-    cardForm.controls['name'].errors" 
-    > <!-- Hidden element-->
-    <div *ngIf="cardForm.controls['name'].errors?.['required']">
-        Value is required
-    </div>
-<!--
-    <div *ngIf="cardForm.controls['name'].errors?.['minlength']">
-        Value you entered is 
-        {{ cardForm.controls['name'].errors?.['minlength'].actualLength | json}}
-        characters long,but it must be at least
-        {{cardForm.controls['name'].errors?.['minlength'].requiredLength | json}}
-
-    </div> -->
-
-</ng-container>
+    <app-input [control] = "cardForm.get('name')"></app-input>    
 </form>
 
 
